--- a/src/Pages/Shared/Header/Header.css
+++ b/src/Pages/Shared/Header/Header.css
@@ -50,3 +50,59 @@
 .hico {
   color: #ff00b3;
 }
+
+.navbar-link-text {
+  font-size: 0.9333rem;
+  font-weight: normal;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #031d44;
+  padding: 20px 0px;
+  margin: 0px 20px;
+  display: inline-block;
+  position: relative;
+  opacity: 0.75;
+  align-items: center;
+  text-align: center;
+  font-family: sans-serif;
+}
+
+.navbar-link-text:hover {
+  opacity: 1;
+  color: goldenrod;
+}
+
+.navbar-link-text::before {
+  transition: 300ms;
+  height: 2px;
+  content: "";
+  position: absolute;
+  background-color: #031d44;
+}
+
+.nav-link-ltr::before {
+  width: 0%;
+  top: 10px;
+  left: 0;
+}
+
+.nav-link-ltr:hover::before {
+  width: 100%;
+  background-color: goldenrod;
+}
+
+.nav-link-active {
+  color: goldenrod;
+}
+.avatar {
+  width: 40px; /* Adjust the width and height as needed */
+  height: 40px;
+  border-radius: 50%; /* Makes the container and image round */
+  overflow: hidden; /* Clips any overflow from the image */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Optional: Add a shadow */
+}
+
+.avatar img {
+  width: 100%;
+  height: auto;
+}
