--- a/src/Pages/Homepage/Slider/Slider.css
+++ b/src/Pages/Homepage/Slider/Slider.css
@@ -23,24 +23,66 @@
 }
 
 .slider-title {
-  color: #000000;
-  font-size: 30px;
+  color: #594d4d;
+  font-size: 11px;
   font-weight: 400;
-  margin-bottom: 30px;
+  margin-bottom: 5px;
 }
 
 .slider-text {
   color: #000000;
-  font-size: 18px;
+  font-size: 0.5rem;
   font-family: Cabin;
 }
-
+.discover-btn {
+  color:white;
+  background-color: red;
+  padding: 0.2rem;
+  font-weight: 300;
+  font-size: 0.5rem;
+  font-family: Cabin;
+border-top-right-radius: 5px;
+border-bottom-left-radius: 5px;
+}
+.discover-btn:hover{
+  background-color: tomato;
+  --bs-btn-border-color:none;
+}
+.btn-primary{
+  border-color: aliceblue;
+}
+p {
+  /* margin-bottom: 1rem; */
+}
 .subtitle {
   color: #df7b27;
 }
 
-@media screen and (min-width: 668px) {
+@media screen and (min-width: 770px) {
   .slider-title {
-    font-size: 68px;
+    font-size: 3rem;
   }
+  .slider-text{
+    font-size: 3rem;
+    margin-bottom: 1rem;
+  }
+  .discover-btn {
+    color:white;
+    background-color: red;
+    padding: 1rem;
+    font-weight: 3000;
+    font-size: 1.5rem;
+    font-family: Cabin;
+  border-top-right-radius: 15px;
+  border-bottom-left-radius: 15px;
+  }
+  .discover-btn:hover{
+    background-color: tomato;
+    --bs-btn-border-color:none;
+  }
+
 }
+
+
+
+
