--- a/src/Pages/Products/Products.css
+++ b/src/Pages/Products/Products.css
@@ -1,7 +1,8 @@
-/* .products-title {
+.products-title {
   font-size: 36px;
   font-family: "Lucida Sans Unicode", "Lucida Grande";
   font-weight: 700;
+  font-style: italic;
 }
 .product-title {
   font-size: 24px;
@@ -16,60 +17,54 @@
 .product-price {
   font-size: 32px;
   color: rgb(0, 167, 83);
-  font-weight: 700;
+  font-weight: 500;
   padding: 1rem;
   margin:0.5rem;
-} */
+}
 
-
+.order-link {
+  font-size:36px;
+  color: rgb(232, 156, 156);
+}
 /* Default styling for larger screens */
-.product-title {
-  font-size: 24px;
-  font-weight: 600;
+/* CSS for Products.css */
+.product-card {
+  position: relative;
+  width: 100%;
 }
 
-.product-vendor {
-  font-size: 16px;
-  font-weight: 600;
-  text-transform: uppercase;
-  color: grey;
+.product-image-container {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
 }
 
-.product-price {
-  font-size: 32px;
-  color: rgb(0, 167, 83);
-  font-weight: 700;
-  padding: 1rem;
-  margin: 0.5rem;
+.product-image {
+  width: 100%;
+  height: auto;
+  transition: transform 0.8s;
 }
 
-.order-button {
-  background-color: rgb(25, 228, 126); /* Green background color */
-  color: black; /* Text color */
-  font-weight: 600; /* Font weight */
-  padding: 0.5rem 1rem; /* Padding */
-  border: none; /* Remove button border */
-  cursor: pointer; /* Add a pointer cursor */
-  font-size: 4rem;
+.product-details-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: opacity 0.3s;
 }
-/* Media query for screens with a maximum width of 768px (typical for mobile devices) */
-@media (max-width: 768px) {
-  .product-title {
-    font-size: 20px; /* Adjust font size for smaller screens */
-  }
 
-  .product-vendor {
-    font-size: 14px; /* Adjust font size for smaller screens */
-  }
+.product-card:hover .product-image {
+  transform: scale(1.1); /* Zoom in effect on hover */
+}
 
-  .product-price {
-    font-size: 24px; /* Adjust font size for smaller screens */
-  }
-
-  .order-button {
-    padding: 0.3rem 0.8rem; /* Adjust padding for smaller screens */
-    font-size: 14px; /* Adjust font size for smaller screens */
-  }
-
-  /* Optionally, you can adjust other styles or layout for mobile devices */
+.product-card:hover .product-details-overlay {
+  opacity: 1; /* Show overlay on hover */
 }
