--- a/src/Pages/Products/Products.css
+++ b/src/Pages/Products/Products.css
@@ -1,33 +1,49 @@
+:root {
+  font-size: 16px; /* Set 1rem = 16px as a root font size */
+}
+
 .products-title {
-  font-size: 36px;
+  font-size: 1rem; /* Equivalent to 16px */
   font-family: "Lucida Sans Unicode", "Lucida Grande";
   font-weight: 700;
   font-style: italic;
 }
 .product-title {
-  font-size: 24px;
+  
+  padding: 0;
+  margin: 0;
+  font-size: 1.5rem; /* Equivalent to 14px (14px / 16px = 0.875rem) */
   font-weight: 600;
+  letter-spacing: 0.15rem;
 }
 .product-vendor {
-  font-size: 16px;
+  
+  padding: 0;
+  margin: 0;
+  font-size: 1rem; /* Equivalent to 11px (11px / 16px = 0.6875rem) */
   font-weight: 600;
   text-transform: uppercase;
   color: grey;
 }
 .product-price {
-  font-size: 32px;
+  
+  padding: 0;
+  margin: 0;
+  font-size: 0.9375rem; /* Equivalent to 15px (15px / 16px = 0.9375rem) */
   color: rgb(0, 167, 83);
   font-weight: 500;
-  padding: 1rem;
-  margin:0.5rem;
+  /* padding: 0.00625rem; */ /* Equivalent to 0.1px (0.1px / 16px = 0.00625rem) */
+  margin: 0.00625rem; /* Equivalent to 0.1px (0.1px / 16px = 0.00625rem) */
 }
 
 .order-link {
-  font-size:36px;
+  padding: 0;
+  margin: 0;
+  font-size: 1.0rem; /* Equivalent to 16px */
   color: rgb(232, 156, 156);
 }
+
 /* Default styling for larger screens */
-/* CSS for Products.css */
 .product-card {
   position: relative;
   width: 100%;
@@ -59,6 +75,9 @@
   align-items: center;
   opacity: 0;
   transition: opacity 0.3s;
+  border-style: solid;
+  border-width: 0.2125rem; /* Equivalent to 9px (9px / 16px = 0.5625rem) */
+  border-color: rgb(221, 194, 194);
 }
 
 .product-card:hover .product-image {
