--- a/src/Pages/Products/Products.css
+++ b/src/Pages/Products/Products.css
@@ -5,21 +5,21 @@
   color: blue;
 }
   .products-page-title{
-    font-size: 3rem;
+    font-size: 2rem;
     font-family: "Lucida Sans Unicode", "Lucida Grande";
     /* font-weight: 700; */
     font-style: italic;
-    /* margin: 2rem; */
-    /* padding: 1rem; */
     background-image:linear-gradient(217deg, rgba(255,0,0,.8), rgba(255,0,0,0) 70.71%),
     linear-gradient(127deg, rgba(0,255,0,.8), rgba(0,255,0,0) 70.71%),
     linear-gradient(336deg, rgba(0,0,255,.8), rgba(0,0,255,0) 70.71%);
     -webkit-background-clip: text;
     background-clip: text;
+    background-color: black;
     color: transparent;
     text-transform: uppercase;
     letter-spacing: 2px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+    color: black;
   }
   .divider {
     border: none;
@@ -122,4 +122,13 @@
 }
 
 
-
+@media (max-width: 768px) {
+  .products-page-title{
+    font-size: 1.1rem;
+  }
+  .divider {
+    border: none;
+    width: 100%;
+    height: 0.5rem;
+  }
+}
