--- a/src/Pages/Dashboard/Dashboard.css
+++ b/src/Pages/Dashboard/Dashboard.css
@@ -6,3 +6,21 @@ ListItemText {
   font-size: 18px;
   font-weight: 900;
 }
+.edit-modal {
+  /* position: relative; */
+  /* background-color: aqua; */
+  /* top: 50%;
+  left: 50%; */
+  /* margin-bottom: 50rem; */
+  /* height:5rem; */
+  /* width:5rem; */
+  /* border: 5px solid red; */
+  /* transform: translate(-50%, -50%); */
+  /* background-color: white; */
+  /* padding: 20px; */
+  /* border: 1px solid red; */
+  /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); */
+  /* z-index: 1000; */
+}
+
+
