--- a/src/components/Input/Inputs.css
+++ b/src/components/Input/Inputs.css
@@ -5,3 +5,17 @@
 .form-input-container {
   min-height: 70px;
 }
+
+p.error-text {
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 0.75rem;
+  line-height: 1.66;
+  letter-spacing: 0.03333em;
+  text-align: left;
+  margin-top: 3px;
+  margin-right: 0;
+  margin-bottom: 0;
+  margin-left: 0;
+  color: #d32f2f;
+}
